done: login/singup views

--- a/src/app/index/log-in/log-in.component.html
+++ b/src/app/index/log-in/log-in.component.html
@@ -1,3 +1,18 @@
-<p>
-  log-in works!
-</p>
+<div class="form-container">
+  <p class="userText" style="font-size: 40px">
+      Iniciar Sesion
+  </p>  
+  
+  <mat-form-field appearance="outline">
+    <mat-label>Usuario</mat-label>
+    <input matInput placeholder="Ingrese nombre de usuario">
+    <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+  </mat-form-field>
+
+  <mat-form-field appearance="outline">
+    <mat-label>Contraseña</mat-label>
+    <input type="password" matInput placeholder="Escriba su contraseña">
+    <mat-icon matSuffix>https</mat-icon>
+  </mat-form-field>
+
+</div>
