--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<h3>Raised Buttons</h3>
-<div class="example-button-row">
-  <button mat-raised-button>Basic</button>
-  <button mat-raised-button color="primary">Primary</button>
-  <button mat-raised-button color="accent">Accent</button>
-  <button mat-raised-button color="warn">Warn</button>
-  <button mat-raised-button disabled>Disabled</button>
-  <a mat-raised-button routerLink=".">Link</a>
-</div>
-
+<app-header></app-header>
+<app-index></app-index>
 <router-outlet></router-outlet>
