--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-header></app-header>
-<app-index></app-index>
+<app-classroom class="poss"></app-classroom>
 <router-outlet></router-outlet>
