--- a/src/app/classroom/classroom.component.html
+++ b/src/app/classroom/classroom.component.html
@@ -1,3 +1,47 @@
-<p>
-  classroom works!
-</p>
+<h1 class="classText">
+  CLASE ...
+</h1>
+<div class="container">
+  <mat-tab-group backgroundColor="primary" mat-stretch-tabs class="example-stretched-tabs mat-elevation-z4">
+    <mat-tab label="Contenido">
+      <ng-template matTabContent>
+        <app-content></app-content>
+      </ng-template>
+    </mat-tab>
+    <mat-tab label="Descripcion">
+      <ng-template matTabContent>
+        <app-description></app-description>
+      </ng-template>
+    </mat-tab>
+    <mat-tab label="Discucion">
+      <ng-template matTabContent>
+        <app-discussion></app-discussion>
+      </ng-template>
+    </mat-tab>
+    <mat-tab label="Cronograma">
+      <ng-template matTabContent>
+        <app-schedule></app-schedule>
+      </ng-template>
+    </mat-tab>
+  </mat-tab-group>
+  
+  <mat-card class="example-card mat-elevation-z4">
+    <mat-card-header>
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title>Shiba Inu</mat-card-title>
+      <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+    <mat-card-content>
+      <p>
+        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+        bred for hunting.
+      </p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button>LIKE</button>
+      <button mat-button>SHARE</button>
+    </mat-card-actions>
+  </mat-card>
+</div>
