--- a/src/app/classroom/classroom.component.html
+++ b/src/app/classroom/classroom.component.html
@@ -27,11 +27,10 @@
   
   <mat-card class="example-card mat-elevation-z4">
     <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>Shiba Inu</mat-card-title>
-      <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+      <mat-card-title>Seyor Lemur</mat-card-title>
+      <mat-card-subtitle>Profesor de Ingles</mat-card-subtitle>
     </mat-card-header>
-    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+    <img mat-card-image src="../../assets/imgs/lemur.jpg" alt="Profile Picture">
     <mat-card-content>
       <p>
         The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
